# kilt-node

./: .cargo-deny.toml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .taplo.toml  ARM_INSTALL.md  Cargo.toml  Dockerfile  HEADER-GPL  LICENSE  README.md  bench-bot.sh  bla.txt  build.sh  buildspec-ci.yml  buildspec.yml  chainspec-devnet-nonraw.json  chainspec-devnet.json  chainspec.devnet.json  chainspec.json  connect.sh  crates.js  db.sqlite-shm  deny.toml  dep-tree  dev-receiver.hex  dev-receiver.wasm  dev-sender.hex  dev-sender.wasm  docker-compose.yml  index.html  kilt-master-bootnode-testnet.sh  kilt-node-testnet.sh  list.txt  logs.txt  mashnet.Dockerfile  nohup.out  notes.txt  (+26 more)
crates/assets/: Cargo.toml
crates/assets/src/: asset.rs  chain.rs  errors.rs  lib.rs  v1.rs
crates/dip/: Cargo.toml
crates/dip-support/: Cargo.toml
crates/dip-support/src/: lib.rs
crates/dip/src/: lib.rs  location_conversion.rs  v1.rs
crates/kilt-dip-primitives/: Cargo.toml
crates/kilt-dip-primitives/src/: did.rs  lib.rs  merkle.rs  merkle_proof.rs  test.rs  traits.rs  utils.rs
crates/kilt-dip-primitives/src/export/: mod.rs  parachain.rs  relaychain.rs
crates/kilt-dip-primitives/src/merkle/: mod.rs  tmp_fixture.rs  v0.rs
crates/kilt-dip-primitives/src/merkle_proofs/: mod.rs
crates/kilt-dip-primitives/src/state_proofs/: error.rs  mod.rs  parachain.rs  relaychain.rs  substrate_no_std_port.rs
crates/kilt-dip-primitives/src/verifier/: common.rs  errors.rs  mod.rs  parachain.rs  relaychain.rs
crates/kilt-dip-support/: Cargo.toml
crates/kilt-dip-support/src/: did.rs  lib.rs  merkle.rs  new_stuff.rs  state_proofs.rs  traits.rs  utils.rs  xcm.rs
crates/kilt-dip-support/src/export/: child.rs  common.rs  mod.rs  parachain.rs  relaychain.rs  sibling.rs
crates/kilt-dip-support/src/state_proofs/: mod.rs  parachain.rs  relaychain.rs
crates/kilt_utils/: Cargo.toml
crates/kilt_utils/src/: lib.rs
dip-template/node/: Cargo.toml
dip-template/node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
integration-tests/emulated/: Cargo.toml
integration-tests/emulated/src/: lib.rs  test.rs  utils.rs
integration-tests/emulated/src/mock/: mod.rs  network.rs  para_chains.rs  parachains.rs  relay_chains.rs  utils.rs
integration-tests/emulated/src/tests/: mod.rs
nodes/common/: Cargo.toml
nodes/common/src/: lib.rs  public_credentials.rs
nodes/parachain/: BUILDING-DEB.md  Cargo.toml  build.rs
nodes/parachain/pkg/debian/: postinst  postrm
nodes/parachain/pkg/systemd/: kilt-parachain.service
nodes/parachain/res/: clone.json  clone2.json  clone3.json  kilt-prod.json  kilt-stage.json  rilt.json  spiritnet.json  void.json
nodes/parachain/res/genesis/: botlabs-accounts.json  claimable-accounts.json  genesis-accounts-test.json  genesis-accounts.json  owned-accounts.json
nodes/parachain/res/genesis-testing/: genesis-accounts.json  mash-genesis-accounts.json
nodes/parachain/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
nodes/parachain/src/chain_spec/: clone.rs  (+7 more)
nodes/standalone/: BUILDING-DEB.md  Cargo.toml  build.rs
nodes/standalone/res/: devnet.json  testnet.json
nodes/standalone/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
pallets/attestation/: Cargo.toml  types.rs
pallets/attestation/src/: access_control.rs  attestation.rs  attestations.rs  authorized_by.rs  benchmarking.rs  default_weights.rs  deposit.rs  hooks.rs  lib.rs  migration.rs  migrations.rs  mock.rs  tests.rs  try_state.rs  types.rs
pallets/author-filter/: Cargo.toml
pallets/author-filter/src/: lib.rs
pallets/crowdloan/: Cargo.toml
pallets/crowdloan/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  storage.rs  tests.rs
pallets/ctype/: Cargo.toml
pallets/ctype/src/: benchmarking.rs  ctype_entry.rs  default_weights.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/delegation/: Cargo.toml
pallets/delegation/src/: access_control.rs  benchmarking.rs  default_weights.rs  delegation.rs  delegation_hierarchy.rs  deprecated.rs  lib.rs  migration.rs  migrations.rs  mock.rs  tests.rs  try_state.rs  types.rs
pallets/did/: Cargo.toml
pallets/did/src/: benchmarking.rs  custom_types.json  custom_types_stable.json  default_weights.rs  deprecated.rs  did_details.rs  errors.rs  identity_consumer.rs  lib.rs  merkle.rs  migration.rs  migrations.rs  mock.rs  mock_utils.rs  origin.rs  service_endpoints.rs  signature.rs  test_utils.rs  tests.rs  traits.rs  try_state.rs  types.rs  url.rs  utils.rs  weights.rs
pallets/dip-identity-provider/: Cargo.toml
pallets/dip-identity-provider/src/: lib.rs
pallets/dip-receiver/: Cargo.toml
pallets/dip-receiver/src/: lib.rs  origin.rs  traits.rs
pallets/dip-sender/: Cargo.toml
pallets/dip-sender/src/: lib.rs  traits.rs
pallets/elections/: Cargo.toml  README.md
pallets/elections/src/: lib.rs
pallets/error/: Cargo.toml
pallets/error/src/: lib.rs
pallets/kilt-launch/: Cargo.toml
pallets/kilt-launch/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/pallet-asset-swap/: Cargo.toml  README.md
pallets/pallet-asset-swap/src/: lib.rs  mock.rs  swap.rs  traits.rs  xcm.rs
primitives/: Cargo.toml
primitives/src/: benchmarks.rs  constants.rs  fees.rs  lib.rs  migrations.rs  pallet_id.rs
runtime/: Cargo.toml  build.rs  expanded.rs
runtime/src/: attestation.rs  ctype.rs  delegation.rs  demo.rs  did.rs  error.rs  lib.rs  portablegabi.rs
runtime/src/attestation/: mod.rs  tests.rs
runtime/src/ctype/: mod.rs  tests.rs
runtime/src/delegation/: mod.rs  tests.rs
runtime/src/did/: mod.rs  tests.rs
runtime/src/error/: mod.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
sdk-wasm/: Cargo.toml  LICENSE_MIT  README.md
sdk-wasm/src/: lib.rs  traits.rs
support/: Cargo.toml
support/src/: assets.rs  benchmark.rs  deposit.rs  lib.rs  migration.rs  migrations.rs  mock.rs  relay.rs  signature.rs  test.rs  test_utils.rs  traits.rs  xcm.rs
traits/: Cargo.toml
traits/src/: lib.rs
(+6436 files in other folders)
