[workspace]
members = [
  "crates/*",
  "dip-template/nodes/*",
  "dip-template/pallets/*",
  "dip-template/runtimes/*",
  "integration-tests/emulated",
  "nodes/*",
  "pallets/*",
  "runtime-api/*",
  "runtimes/*",
  "support",
]
resolver = "2"

[workspace.package]
authors       = ["KILT <info@kilt.io>"]
documentation = "https://docs.kilt.io"
edition       = "2021"
homepage      = "https://kilt.io/"
license-file  = "LICENSE"
readme        = "README.md"
repository    = "https://github.com/KILTprotocol/kilt-node"
version       = "1.14.0-dev"

[workspace.dependencies]
# Build deps
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }

# External (without extra features and with default disabled if necessary)
base58             = { version = "0.2.0", default-features = false }
bitflags           = { version = "1.3.2", default-features = false }
cfg-if             = { version = "1.0" }
clap               = { version = "4.1.6" }
enum-iterator      = { version = "2.0.0" }
env_logger         = { version = "0.10.0" }
fluent-uri         = { version = "0.1.4", default-features = false }
futures            = { version = "0.3.21", default-features = false }
hash-db            = { version = "0.16.0", default-features = false }
hex                = { version = "0.4.0", default-features = false }
hex-literal        = { version = "0.3.4" }
jsonrpsee          = { version = "0.20.3" }
libsecp256k1       = { version = "0.7", default-features = false }
log                = { version = "0.4.17" }
parity-scale-codec = { version = "3.1.5", default-features = false }
scale-info         = { version = "2.1.1", default-features = false }
serde              = { version = "1.0.144", default-features = false }
serde_json         = { version = "1.0.85" }
sha3               = { version = "0.10.0", default-features = false }
smallvec           = { version = "1.8.0" }

#tests
xcm-integration-tests = { path = "integration-tests/emulated", default-features = false }

# Internal pallets (with default disabled)
attestation            = { path = "pallets/attestation", default-features = false }
ctype                  = { path = "pallets/ctype", default-features = false }
delegation             = { path = "pallets/delegation", default-features = false }
did                    = { path = "pallets/did", default-features = false }
pallet-configuration   = { path = "pallets/pallet-configuration", default-features = false }
pallet-deposit-storage = { path = "pallets/pallet-deposit-storage", default-features = false }
pallet-did-lookup      = { path = "pallets/pallet-did-lookup", default-features = false }
pallet-dip-consumer    = { path = "pallets/pallet-dip-consumer", default-features = false }
pallet-dip-provider    = { path = "pallets/pallet-dip-provider", default-features = false }
pallet-inflation       = { path = "pallets/pallet-inflation", default-features = false }
pallet-migration       = { path = "pallets/pallet-migration", default-features = false }
pallet-relay-store     = { path = "pallets/pallet-relay-store", default-features = false }
pallet-web3-names      = { path = "pallets/pallet-web3-names", default-features = false }
parachain-staking      = { path = "pallets/parachain-staking", default-features = false }
public-credentials     = { path = "pallets/public-credentials", default-features = false }

# Internal support (with default disabled)
kilt-asset-dids     = { path = "crates/assets", default-features = false }
kilt-dip-primitives = { path = "crates/kilt-dip-primitives", default-features = false }
kilt-support        = { path = "support", default-features = false }
runtime-common      = { path = "runtimes/common", default-features = false }

# Templates
dip-consumer-runtime-template = { path = "dip-template/runtimes/dip-consumer", default-features = false }
dip-provider-runtime-template = { path = "dip-template/runtimes/dip-provider", default-features = false }
pallet-postit                 = { path = "dip-template/pallets/pallet-postit", default-features = false }
pallet-xcavate-whitelist      = { path = "dip-template/pallets/xcavate-whitelist", default-features = false }
pallet-nft-marketplace      = { path = "dip-template/pallets/nft-marketplace", default-features = false }
pallet-property-management      = { path = "dip-template/pallets/property-management", default-features = false }
pallet-property-governance      = { path = "dip-template/pallets/property-governance", default-features = false }

# Internal runtime API (with default disabled)
kilt-runtime-api-did                = { path = "runtime-api/did", default-features = false }
kilt-runtime-api-dip-provider       = { path = "runtime-api/dip-provider", default-features = false }
kilt-runtime-api-public-credentials = { path = "runtime-api/public-credentials", default-features = false }
kilt-runtime-api-staking            = { path = "runtime-api/staking", default-features = false }

# Internal KILT runtimes (with default disabled)
kestrel-runtime   = { path = "runtimes/kestrel", default-features = false }
peregrine-runtime = { path = "runtimes/peregrine", default-features = false }
spiritnet-runtime = { path = "runtimes/spiritnet", default-features = false }

# Benchmarking (with default disabled)
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
frame-system-benchmarking           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }

# Cumulus (with default disabled)

cumulus-pallet-aura-ext         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
cumulus-pallet-dmp-queue        = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
cumulus-pallet-xcm              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
cumulus-pallet-xcmp-queue       = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
cumulus-primitives-aura         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
cumulus-primitives-core         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
cumulus-primitives-timestamp    = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
cumulus-primitives-utility      = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
parachain-info                  = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
parachains-common               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }

# XCM Emulator tests
asset-hub-kusama-runtime          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
asset-hub-polkadot-runtime        = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
asset-hub-rococo-emulated-chain   = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
asset-hub-rococo-runtime          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
asset-hub-westend-runtime         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
bridge-hub-kusama-runtime         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
bridge-hub-polkadot-runtime       = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
bridge-hub-rococo-runtime         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
collectives-polkadot-runtime      = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
emulated-integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
penpal-runtime                    = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
rococo-emulated-chain             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
xcm-emulator                      = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }

# Substrate (with default disabled)
frame-benchmarking                         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
frame-benchmarking-cli                     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
frame-executive                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
frame-support                              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
frame-system                               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
frame-system-rpc-runtime-api               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
frame-try-runtime                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-aura                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-authorship                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-balances                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-collator-selection                  = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-collective                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-democracy                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-grandpa                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-im-online                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-indices                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-membership                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-message-queue                       = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-multisig                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-preimage                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-proxy                               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-scheduler                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-session                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-sudo                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-timestamp                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-tips                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-transaction-payment                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-treasury                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-utility                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-vesting                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-api                                     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-authority-discovery                     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-block-builder                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-consensus-aura                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-consensus-babe                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-core                                    = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-genesis-builder                         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-inherents                               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-io                                      = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-offchain                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-runtime                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-session                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-staking                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-state-machine                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-std                                     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-tracing                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-transaction-pool                        = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-trie                                    = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-version                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
sp-weights                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
try-runtime-cli                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-assets                              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-nfts                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
pallet-nft-fractionalization               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }

# Polkadot (with default disabled)
pallet-xcm                  = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
polkadot-parachain          = { package = "polkadot-parachain-primitives", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
polkadot-runtime-common     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
rococo-runtime              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
xcm                         = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
xcm-builder                 = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
xcm-executor                = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }
xcm-simulator               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-crates-io-v1.7.0" }

# Client-only (with default enabled)
cumulus-client-cli                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-client-collator                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-client-consensus-aura           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-client-consensus-common         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-client-consensus-proposer       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-client-network                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-client-service                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-primitives-parachain-inherent   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-relay-chain-interface           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-relay-chain-minimal-node        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
cumulus-relay-chain-rpc-interface       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
pallet-transaction-payment-rpc          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
polkadot-cli                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
polkadot-primitives                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
polkadot-service                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-basic-authorship                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-chain-spec                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-cli                                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-client-api                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-consensus                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-consensus-aura                       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-consensus-grandpa                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-executor                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-keystore                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-network                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-network-sync                         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-offchain                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-rpc-api                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-service                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-sysinfo                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-telemetry                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-tracing                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-transaction-pool                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sc-transaction-pool-api                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sp-blockchain                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sp-consensus                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sp-consensus-beefy                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sp-consensus-grandpa                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sp-keyring                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sp-keystore                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
sp-timestamp                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
substrate-build-script-utils            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
substrate-frame-rpc-system              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }
substrate-prometheus-endpoint           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.7.0" }

[profile]

[profile.release]
codegen-units = 1
lto           = "fat"
panic         = "unwind"

# Defaults for `release` profiles as specified in https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release-unoptimized]
codegen-units = 16
incremental   = true
inherits      = "release"
lto           = false
